tests/invalid/sorted_non_list_arg/main.py
def run_case() -> None:
    out: list[int] = sorted(123)


if __name__ == "__main__":
    run_case()
